# OSLab1

CMakOSLab1/: CMakeLists.txt
CMakOSLab1/CMakOSLab1/: CMakeLists.txt  header.h
CMakOSLab1/CMakOSLab1/Creator/: CMakeLists.txt  Creator.cpp
CMakOSLab1/CMakOSLab1/Main/: CMakeLists.txt  Main.cpp
CMakOSLab1/CMakOSLab1/Reporter/: CMakeLists.txt  Reporter.cpp
CMakOSLab1/Creator/: Creator.cpp
CMakOSLab1/Main/: Main.cpp
CMakOSLab1/Reporter/: Reporter.cpp
CMakOSLab1/TestLab1/: CMakeLists.txt  tst_test1.cpp
Creator/: Creator.sln
Creator/Creator/: Creator.cpp  Creator.vcxproj
Main/: Main.sln
Main/Main/: Main.cpp  Main.vcxproj
Reporter/: Reporter.sln
Reporter/Reporter/: Reporter.cpp  Reporter.vcxproj
